# aos

./: ._aos.json  ._config.json  ._version_data.json  .gitignore  .prettierrc  Install_AOS.sh  README.md  __aos__.json  config.json  config.json.templ  config.jsonc.templ  f8fix.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml
AOS/: __init__.py  __main__.py  database.py  helpers.py  middleware.py  plugin_loader.py  release_bot.py
AOS/installer/: example_unit.service
AOS/models/: AOSConfig.py  CoreConfig.py  RatingPayload.py
AOS/plugins/FeedbackAssistant/: __init__.py  meta.json
AOS/plugins/core/: meta.json
AOS/plugins/core/admin/: __init__.py
AOS/plugins/core/admin/routes/: api.py  frontend.py
AOS/plugins/core/admin/static/js/: common.js  login.js
AOS/plugins/core/admin/static/scss/: common.scss  login.scss
AOS/plugins/core/admin/templates/: base.html
AOS/plugins/core/admin/templates/admin/: home.html
AOS/plugins/core/admin/templates/auth/: login.html  signup.html
AOS/plugins/core/routes/: __init__.py  backend.py  frontend.py  public.py
AOS/plugins/core/routes/utils/: color_detection.py  helpers.py  report.py
AOS/plugins/core/routes/utils/reports/: report.py
AOS/plugins/database/: __init__.py  meta.json
AOS/plugins/database/tools/: README.md  __init__.py  mongo_backup.sh
AOS/plugins/middleware/: __init__.py  meta.json
AOS/plugins/remote/: __init__.py  meta.json
AOS/plugins/remote/bot/: modals.py  processor.py  queue.py
AOS/plugins/remote/middleware/: __init__.py
AOS/plugins/reporting/: __init__.py  meta.json
AOS/plugins/version_reporting_tool/: meta.json
AOS/reports/: GraphReporter.py  report.py
AOS/routes/: backend.py  frontend.py  public.py
AOS/utils/: logging.py  release_bot.py  usage_graph.py
