[project]
name = "administer-aos"
description = "Administer's AOS service for distributing apps."
version = "4.2.0"
requires-python = ">=3.11"
authors = [{ name = "pyxfluff", email = "business@notpyx.me" }]
dependencies = [
    # HTTP
    "uvicorn",
    "fastapi",
    "httpx",

    # Utilities
    "Levenshtein",
    "colorthief",
    "pymongo",
    "pathlib",
    "nanoid",
    "orjson",
    "psutil>=7.0.0",

    # Discord
    #"audioop-lts",
    #"py-cord",

    # Git packages
    "indigo-logger @ git+https://github.com/iiPythonx/il",
    
    # Development
    "matplotlib",
    "flake8>=7.2.0",
]

urls.PrimaryServer = "https://admsoftware.org"

[project.scripts]
aos = "AOS.__main__:main"
