[project]
name = "administer-aos"
description = "Administer's AOS service for distributing apps."
readme = "README.md"

version = "5.6.1"
requires-python = ">=3.12"

authors = [{ name = "pyxfluff", email = "pyx@admsoftware.org" }]
dependencies = [
    # HTTP
    "uvicorn",
    "fastapi",
    "httpx",
    # Utilities
    "Levenshtein",
    "colorthief",
    "pymongo",
    "pathlib",
    "nanoid",
    "orjson",
    "psutil>=7.0.0",
    "rich",
    "pydantic",
    "tqdm>=4.67.1",
    # Discord
    #"audioop-lts",
    #"py-cord",
    # Development
    "matplotlib",
    "bcrypt>=4.3.0"
]

[project.optional-dependencies]
server = [
    "redis",
    "bcrypt",
    "argon2-cffi",
    "jinja2",
    "libsass"
]

dev = ["ruff", "flake8"]

[project.urls]
homepage = "https://admsoftware.org"
repository = "https://github.com/administer-org/app-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
metadata.allow-direct-references = true
build.targets.wheel.packages = ["AOS"]

[project.scripts]
aos = "AOS.__main__:main"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = true
